welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:3: error: ';' expected but '(' found.
avance();
      ^